<resources>
    <string name="app_name">SimpleMusicPlayer</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>

    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_settings">settings</string>
    <string name="menu_about">About</string>

    <string name="button_add">Add</string>
    <string name="button_edit">Edit</string>
    <string name="button_cancel">Cancel</string>
    <string name="hint_name">name</string>
    <string name="hint_count">count</string>

    <string name="my_logo">my logo</string>
    <string name="simplemusicplayer_by_rg_engineering">Simple Music Player by rg-engineering</string>
    <string name="v_0_0_0" translatable="false">V 0.0.0</string>
    <string name="info_rg_engineering_eu" translatable="false">info@rg-engineering.eu</string>
    <string name="rg_engineering_eu" translatable="false">rg-engineering</string>
    <string name="copyright" translatable="false">(c) 2023 - 2025</string>

    <!-- Preference Titles -->
    <string name="messages_header" translatable="false">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>

    <string name="share">share</string>
    <string name="email">email</string>

    <string name="lists">lists</string>
    <string name="design">design</string>

    <string name="useBackgroundColor">useBackgroundColor</string>
    <string name="BackgroundColor">BackgroundColor</string>
    <string name="BackgroundImage">BackgroundImage</string>



    <!-- Sync Preferences -->
    <string name="enableclosed">EnableClosed</string>

    <string name="ShowDataPrivacy">Data protection</string>

    <string name="disableclosed">DisableClosed</string>
    <string name="menu_tracks">tracks </string>
    <string name="menu_albums">albums </string>
    <string name="menu_artists">artists</string>
    <string name="plex_server" >Plex-Server</string>
    <string name="plex_server_ip" >Plex Server IP</string>
    <string name="plex_server_port" >Plex Server Port</string>
    <string name="plex_server_token" >Plex Server Token</string>
    <string name="settings_general" >General Settings</string>
    <string name="usePlexServer" >use Plex Server</string>
    <string name="plex_server_libid" >Plex Server Library ID</string>
    <string name="sentry_hint" >This app uses Sentry libraries to automatically report exceptions and code errors to the developers.</string>
    <string name="playlist">PlayList</string>
    <string name="library">Library</string>
    <string name="album">album</string>
    <string name="albums">Albums</string>
    <string name="artists">artists</string>
    <string name="tracks">Tracks</string>
    <string name="alphabetically_descending">alphabetically (descending)</string>
    <string name="alphabetically_ascending">alphabetically (ascending)</string>
    <string name="track_number_on_album_descending">track number on album (descending)</string>
    <string name="track_number_on_album_ascending">track number on album (ascending)</string>
    <string name="sentry">Sentry</string>
    <string name="use_sentry">use Sentry</string>
    <string name="showsentrydataprivacy">Sentry Data Privacy</string>
    <string name="how_to_get_plex_server_token">How to get plex server token</string>
    <string name="artist">artist</string>
    <string name="numberofalbum">numberOfAlbum</string>
    <string name="numberofartists">numberOfArtists</string>
    <string name="permissionrequired">PermissionRequired</string>
    <string name="numberoftracksinplaylist">numberOfTracksInPlaylist</string>
    <string name="track">track</string>
    <string name="numberoftracks">numberOfTracks</string>
    <string name="confirm">confirm</string>
    <string name="please_check_ip_settings">please_check_IP_settings</string>
    <string name="inform_wrong_ip_config">inform_wrong_IP_config</string>


</resources>