<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory app:title="@string/settings_general">
        <CheckBoxPreference
            app:key="usePlexServer"
            app:title="@string/usePlexServer"
            app:defaultValue="true"
            />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/plex_server">

        <EditTextPreference
            app:key="plex_server_ip"
            app:title="@string/plex_server_ip"
            app:defaultValue="xxx.xxx.xxx.xxx"
            app:useSimpleSummaryProvider="true"
            app:isPreferenceVisible="false"/>

        <EditTextPreference
            app:key="plex_server_port"
            app:title="@string/plex_server_port"
            app:defaultValue="32400"
            app:useSimpleSummaryProvider="true"
            app:isPreferenceVisible="false"/>

        <EditTextPreference
            app:key="plex_server_token"
            app:title="@string/plex_server_token"
            app:defaultValue="LAtVbxshNWzuGUwtm8bJ"
            app:useSimpleSummaryProvider="true"
            app:isPreferenceVisible="false"/>

        <Preference
            app:key="GetHint"
            app:title="@string/how_to_get_plex_server_token"
            app:isPreferenceVisible="false">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://support.plex.tv/articles/204059436-finding-an-authentication-token-x-plex-token/" />
        </Preference>

        <EditTextPreference
            app:key="plex_server_libid"
            app:title="@string/plex_server_libid"
            app:defaultValue="2"
            app:useSimpleSummaryProvider="true"
            app:isPreferenceVisible="false"/>

    </PreferenceCategory>


    <PreferenceCategory app:title="@string/design">
        <CheckBoxPreference
            app:key="useBackgroundColor"
            app:title="@string/useBackgroundColor"
            app:defaultValue="true"
            />

        <ListPreference
            app:key="BackgroundColor"
            app:title="@string/BackgroundColor"
            app:entries="@array/background_color_names_array"
            app:entryValues="@array/background_color_values_array"
            app:defaultValue=""
            app:useSimpleSummaryProvider="true"/>

        <Preference
            app:key="BackgroundImage"
            app:title="@string/BackgroundImage"
            app:defaultValue=""
            app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sentry">
        <CheckBoxPreference
            app:key="useSentry"
            app:title="@string/use_sentry"
            app:defaultValue="true"/>
    </PreferenceCategory>

</PreferenceScreen>