<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_list"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_artists"
            android:icon="@drawable/ic_list"
            android:title="@string/menu_artists" />

        <item
            android:id="@+id/nav_albums"
            android:icon="@drawable/ic_list"
            android:title="@string/menu_albums" />

        <item
            android:id="@+id/nav_tracks"
            android:icon="@drawable/ic_list"
            android:title="@string/menu_tracks" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />

        <item
            android:id="@+id/nav_about"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/menu_about" />
    </group>
</menu>